fixing spacing in mobile view

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,7 +36,7 @@ $darkBlue: unquote('#3c3c4ef0');
 
 .skill-box {
   font-size: 0.9em;
-  margin: 0.6em;
+  margin-top: 1.5em;
 
   .row {
     background: white;
@@ -59,7 +59,8 @@ $darkBlue: unquote('#3c3c4ef0');
 
   .skill-box-container{ 
     background: $lightGrey;
-    padding: 1em;
+    padding:1em;
+    padding-top: 0.1em;
   }
 
 }
